dirty_homePage_example

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,16 +1,32 @@
 <html lang="ru">
 <head>
     <title>home</title>
-
-    <meta charset="utf-8" type="text/css; text/html">
     <meta charset="UTF-8">
-
     <link rel="stylesheet" href="resources/css/home.css">
-    <script src="resources/js/home.js"></script>
+    <link rel="stylesheet" href="resources/css/cube.css">
 
-    <style>body{background: url("resources/content/img/21.jpg");background-size: cover;}</style>
 </head>
 <body>
+<div id="cube">
+    <div class="side" id="left">
+        <div id="registration">Sign Up</div>
+    </div>
+    <div class="side" id="right"></div>
+    <div class="side" id="top"></div>
+    <div class="side" id="bottom"></div>
+    <div class="side" id="front">
+        <div id="login">Login</div>
+    </div>
+    <div class="side" id="back"></div>
+</div>
+
+<div id="mainPane">
+    <div id="innerPane2"></div>
+    <div id="innerPane1"></div>
+</div>
+
+<script src="resources/js/home.js"></script>
+<script src="resources/js/curcube.js"></script>
 
 </body>
 </html>
