visual_side_js_css_content_added

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,29 +4,62 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="resources/css/home.css">
     <link rel="stylesheet" href="resources/css/cube.css">
+    <link rel="stylesheet" href="resources/css/label.css">
+    <meta http-equiv="no-cache">
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Cache-Control" content="no-cache">
+
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+
+
+    <style>
+
+
+
+
+    </style>
 
 </head>
-<body>
-<div id="cube">
-    <div class="side" id="left">
-        <div id="registration">Sign Up</div>
-    </div>
-    <div class="side" id="right"></div>
-    <div class="side" id="top"></div>
-    <div class="side" id="bottom"></div>
-    <div class="side" id="front">
-        <div id="login">Login</div>
-    </div>
-    <div class="side" id="back"></div>
-</div>
+    <body>
+        <audio id="aud1" src="resources/content/sound/intro.mp3"></audio>
+        <audio id="aud2" src="resources/content/sound/choose.mp3"></audio>
 
-<div id="mainPane">
-    <div id="innerPane2"></div>
-    <div id="innerPane1"></div>
-</div>
+
+
+        <div id="secondPane"></div>
+
+        <div id="mainPane">
+            <div id="cube">
+                <div class="side" id="left">
+                    <div id="registration">Sign Up</div>
+                </div>
+                <div class="side" id="right"></div>
+                <div class="side" id="top"></div>
+                <div class="side" id="bottom"></div>
+                <div class="side" id="front">
+                    <div id="login">Log in</div>
+                </div>
+                <div class="side" id="back"></div>
+            </div>
+            <div id="light"></div>
+
+            <div id="labelWrapper">
+                <div id="radical" class="label">Radical</div>
+                <div id="performance" class="label">performance</div>
+            </div>
+            <div id="bgPane"></div>
+            <div id="innerPane2"></div>
+            <div id="innerPane1">
+            <div id="innerPane1sub"></div>
+            </div>
+        </div>
 
 <script src="resources/js/home.js"></script>
-<script src="resources/js/curcube.js"></script>
+<script src="resources/js/minicube.js"></script>
+<script src="resources/js/stars.js"></script>
+
 
 </body>
 </html>
