view_checkpoint_before_adding_ajax

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -15,10 +15,9 @@
 
 
     <style>
-
-
-
-
+        #bgPane{
+            background-image: url("resources/content/img/21.jpg");
+        }
     </style>
 
 </head>
@@ -43,7 +42,6 @@
                 </div>
                 <div class="side" id="back"></div>
             </div>
-            <div id="light"></div>
 
             <div id="labelWrapper">
                 <div id="radical" class="label">Radical</div>
