--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,18 +8,12 @@
     <meta http-equiv="no-cache">
     <meta http-equiv="Expires" content="-1">
     <meta http-equiv="Cache-Control" content="no-cache">
-
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
 
-
     <style>
-        #bgPane{
-            background-image: url("resources/content/img/21.jpg");
-        }
+        #bgPane{background-image: url("resources/content/img/21.jpg");}
     </style>
-
 </head>
     <body>
         <audio id="aud1" src="resources/content/sound/intro.mp3"></audio>
@@ -40,7 +34,7 @@
                 <div class="side" id="front">
                     <div id="login">Log in</div>
                 </div>
-                <div class="side" id="back"></div>
+                `<div class="side" id="back"></div>
             </div>
 
             <div id="labelWrapper">
@@ -53,10 +47,10 @@
             <div id="innerPane1sub"></div>
             </div>
         </div>
-
-<script src="resources/js/home.js"></script>
-<script src="resources/js/minicube.js"></script>
-<script src="resources/js/stars.js"></script>
+        <script src="resources/js/home.js"></script>
+        <script src="resources/js/minicube.js"></script>
+        <script src="resources/js/stars.js"></script>
+        <script src="resources/js/ajax.js"></script>
 
 
 </body>
