--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,14 +5,16 @@
     <link rel="stylesheet" href="resources/css/home.css">
     <link rel="stylesheet" href="resources/css/cube.css">
     <link rel="stylesheet" href="resources/css/label.css">
+    <link rel="stylesheet" href="resources/css/regForm.css">
+
     <meta http-equiv="no-cache">
-    <meta http-equiv="Expires" content="-1">
     <meta http-equiv="Cache-Control" content="no-cache">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
 
     <style>
         #bgPane{background-image: url("resources/content/img/21.jpg");}
+        #secondPane{background: url("resources/content/img/331.jpg"); background-size: cover;}
     </style>
 </head>
     <body>
@@ -51,7 +53,5 @@
         <script src="resources/js/minicube.js"></script>
         <script src="resources/js/stars.js"></script>
         <script src="resources/js/ajax.js"></script>
-
-
 </body>
 </html>
