before_new_branch_of_view_creating

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -2,10 +2,10 @@
 <head>
     <title>home</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="resources/css/home.css">
-    <link rel="stylesheet" href="resources/css/cube.css">
-    <link rel="stylesheet" href="resources/css/label.css">
-    <link rel="stylesheet" href="resources/css/regForm.css">
+    <link rel="stylesheet" href="resources/css/home.css" type="text/css">
+    <link rel="stylesheet" href="resources/css/cube.css" type="text/css">
+    <link rel="stylesheet" href="resources/css/label.css" type="text/css">
+    <link rel="stylesheet" href="resources/css/regForm.css" type="text/css">
 
     <meta http-equiv="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
