before_windows_uninstalling

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -13,8 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
 
     <style>
-        #bgPane{background-image: url("resources/content/img/21.jpg");}
-        #secondPane{background: url("resources/content/img/331.jpg"); background-size: cover;}
+        @media (max-width:1200px){
+            #bgPane{
+                background-size: initial;
+            }
+        }
     </style>
 </head>
     <body>
